client/shifty.css
/* 
 * Bootstrap Overrides 
 *****************************/

.page-header {
	margin-bottom: 0;
	border-bottom-width: 0;
}
.navbar {
	margin-bottom: 0;
}
.breadcrumb {
	margin-bottom: 0;
}

/* only show the close button when the alert message is being show*/
button[data-dismiss] {
	display: none;
}
.error button[data-dismiss] {
	display: block;
}

h2.column-header {
	margin-top: 0;
	line-height: normal;
}



/*
 * Custom styles
 *****************************/

.message-placeholder {
	height: 40px;
}

.shift-count {
	font-size: 16px;
	font-weight: bold;
	cursor: pointer;
	margin-left: 7px;
}
.shift-count.zero {
	color: silver;
}
.input-append .shift.span1 {
	width: 20px;
}

.icon-info-sign {
	cursor: pointer;
}

i[data-activate-shift-id], 
i[data-deactivate-shift-id], 
i[data-delete-shiftdef-id] {
	cursor: pointer;
}

.photo-placeholder {
	width: 200px;
	height: 200px;
	margin: 0 auto 20px auto;
	position: relative;
	background-repeat: no-repeat;
}
.photo-placeholder.small {
	width: 70px;
	height: 70px;
	background-size: contain;
	border: 1px solid silver;
}
.photo-placeholder.empty {
	border: 2px dashed silver;
}
.photo-placeholder.male {
	background-image: url(/img/no-male-photo.jpg);
}
.photo-placeholder.female {
	background-image: url(/img/no-female-photo.jpg);
}
.photo-placeholder h4 {
	text-align: center;
}
.photo-placeholder p {
	position: absolute;
	text-align: center;
	margin: 5px;
	bottom: 5px;
}
.photo-placeholder .loading {
	width: 40px;
	display: block;
    margin-left: auto;
    margin-right: auto;
}

.volunteer-photo {
	margin-top: 20px;
	margin-bottom: 10px;
}


.volunteer-list .volunteer-info {
	line-height: 18px;
	height: 57px;
}
.volunteer-list .volunteer-info .volunteer-name {
	font-size: 24px;
}
.volunteer-list .volunteer-info .volunteer-phone {
	font-size: 12px;
}
.volunteer-list .volunteer-info .volunteer-email {
	font-size: 12px;
}
.volunteer-list .row {
	margin-bottom: 20px;
}

